--- a/react-primeiro-projeto/src/app/globals.css
+++ b/react-primeiro-projeto/src/app/globals.css
@@ -10,6 +10,6 @@
 
 body {
   background: var(--foreground);
-  color: var(--foreground);
+  color: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
